# veloxdb

./: CMakeLists.txt  Cargo.toml  README.md  build.sh
cpp/include/velox/: concepts.hpp  core.hpp  dtypes.hpp
cpp/include/velox/storage/: storage_engine.hpp
cpp/include/velox/utils/: byte.hpp  compression.hpp  hash.hpp  math.hpp  memory.hpp  random.hpp
cpp/src/velox/: core.cpp
