[workspace]
members = []
resolver="2"

[workspace.package]
version="0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Carlos Salguero <carlossalguero441@gmail.com>"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.0", features=["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
cxx = "1.0"
clap = { version = "4.0", features = ["derive"] }